# QuietNightBot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: buildanddeploy.yaml
src/: main.rs  util.rs
src/commands/: join.rs  leave.rs  mod.rs  mute.rs  ping.rs  queue.rs  search.rs  setrain.rs  setvolume.rs  skip.rs  stop.rs  unmute.rs
src/events/: voice_state_update.rs
