[package]
name = "quiet_night_bot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "voice", "cache"] }
tokio = { version = "1.13.0", features = ["full"] }
dotenv = "0.15.0"
songbird = { version = "0.3.0", features = ["builtin-queue"] }
tracing = "0.1"
tracing-subscriber = "0.3.16"
tracing-futures = "0.2"
regex = "1.5.4"
lazy_static = "1.4.0"
yt-api = "0.3.2"